--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="/">
+        <a href="./index.html" class="logo">
           Web Studio
         </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth-nav list">
         <li>
           <a href="mail:info@devstudio.com">info@devstudio.com</a>
         </li>
