Добавляет палитру цветов, переменные

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     <main>
       <!--Герой-->
       <div>
-        <section>
+        <section class="hero">
           <h1>эффективные решения для вашего бизнеса</h1>
           <a href="">Заказать услугу</a>
         </section>
       </div>
 
       <!--Особенности-->
-      <section>
+      <section class="section">
         <!--Спрятать заголовок при стилизации-->
-        <h2>Особенности</h2>
+        <h2 class="section-title">Особенности</h2>
 
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="block-title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -53,7 +53,7 @@
           </li>
 
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="block-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -61,7 +61,7 @@
           </li>
 
           <li>
-            <h3>Планирование</h3>
+            <h3 class="block-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -69,7 +69,7 @@
           </li>
 
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="block-title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -79,37 +79,37 @@
       </section>
 
       <!--Чем мы занимаемся-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <div>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <div class="activities">
           <img
             src="./images/notebook.jpg"
             width="370"
             alt="Фотография ноутбука"
           />
-          <a href="">Десктопные приложения</a>
+          <a href="" class="activities-link">Десктопные приложения</a>
         </div>
-        <div>
+        <div class="activities">
           <img
             src="./images/smartphone.jpg"
             width="370"
             alt="фотография смартфона"
           />
-          <a href="">Мобильные приложения</a>
+          <a href="" class="activities-link">Мобильные приложения</a>
         </div>
-        <div>
+        <div class="activities">
           <img
             src="./images/monitor.jpg"
             width="370"
             alt="фотография монитора"
           />
-          <a href="">Дизайнерские решения</a>
+          <a href="" class="activities-link">Дизайнерские решения</a>
         </div>
       </section>
 
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
 
         <ul>
           <!--Джон Смитт-->
@@ -177,8 +177,8 @@
       </section>
 
       <!--Наши клиенты-->
-      <section>
-        <h2>Постоянные клиенты</h2>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
         <ul>
           <li>
             <img src="./images/logo_client_1.svg" alt="Логотип клиента 1" />
@@ -210,7 +210,7 @@
     <footer>
       <!--Спрятать заголовок-->
 
-      <h2>Адрес и телефоны</h2>
+      <h2 class="section-title">Адрес и телефоны</h2>
       <p>Web Studio</p>
       <address>
         г. Киев, пр-т Леси Украинки, 26
