--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
           Web Studio
         </a>
         <ul class="site-nav list">
-          <li><a href="" class="link">Студия</a></li>
-          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a href="mail:info@devstudio.com">info@devstudio.com</a>
+          <a href="mail:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -34,7 +34,7 @@
       <div>
         <section class="hero">
           <h1>эффективные решения для вашего бизнеса</h1>
-          <a href="">Заказать услугу</a>
+          <a href="" class="button primary">Заказать услугу</a>
         </section>
       </div>
 
@@ -108,10 +108,10 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section">
+      <section class="team-section">
         <h2 class="section-title">Наша команда</h2>
 
-        <ul>
+        <ul class="team-list">
           <!--Джон Смитт-->
           <li>
             <img
@@ -119,12 +119,12 @@
               width="260"
               alt="фото Джон Смитт"
             />
-            <p>John Smith</p>
-            <p>Product Designer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">linkedin</a>
+            <p class="name">John Smith</p>
+            <p class="profession">Product Designer</p>
+            <a href="" class="social-link">instagram</a>
+            <a href="" class="social-link">twitter</a>
+            <a href="" class="social-link">facebook</a>
+            <a href="" class="social-link">linkedin</a>
           </li>
 
           <!--Марта Стюарт-->
@@ -135,12 +135,12 @@
               width="260"
               alt="фото Марта Стюарт"
             />
-            <p>Marta Stewart</p>
-            <p>Frontend Developer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">linkedin</a>
+            <p class="name">Marta Stewart</p>
+            <p class="profession">Frontend Developer</p>
+            <a href="" class="social-link">twitter</a>
+            <a href="" class="social-link">facebook</a>
+            <a href="" class="social-link">linkedin</a>
+            <a href="" class="social-link">instagram</a>
           </li>
 
           <!--Роберт Джакис-->
@@ -150,12 +150,12 @@
               width="260"
               alt="фото Роберт Джакис"
             />
-            <p>Robert Jakist</p>
-            <p>Marketing</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">linkedin</a>
+            <p class="name">Robert Jakist</p>
+            <p class="profession">Marketing</p>
+            <a href="" class="social-link">instagram</a>
+            <a href="" class="social-link">twitter</a>
+            <a href="" class="social-link">facebook</a>
+            <a href="" class="social-link">linkedin</a>
           </li>
 
           <!--Мартин Дью-->
@@ -166,12 +166,12 @@
               width="260"
               alt="фото Мартин Дью"
             />
-            <p>Martin Doe</p>
-            <p>UI Designer</p>
-            <a href="">instagram</a>
-            <a href="">twitter</a>
-            <a href="">facebook</a>
-            <a href="">linkedin</a>
+            <p class="name">Martin Doe</p>
+            <p class="profession">UI Designer</p>
+            <a href="" class="social-link">instagram</a>
+            <a href="" class="social-link">twitter</a>
+            <a href="" class="social-link">facebook</a>
+            <a href="" class="social-link">linkedin</a>
           </li>
         </ul>
       </section>
@@ -180,58 +180,72 @@
       <section class="section">
         <h2 class="section-title">Постоянные клиенты</h2>
         <ul>
-          <li>
-            <img src="./images/logo_client_1.svg" alt="Логотип клиента 1" />
+          <li class="client-logo">
+            <a href="" class="client-logo">
+              <img src="./images/logo_client_1.svg" alt="Логотип клиента 1" />
+            </a>
           </li>
 
-          <li>
-            <img src="./images/logo_client_2.svg" alt="Логотип клиента 2" />
+          <li class="client-logo">
+            <a href="" class="client-logo">
+              <img src="./images/logo_client_2.svg" alt="Логотип клиента 2" />
+            </a>
           </li>
 
-          <li>
-            <img src="./images/logo_client_3.svg" alt="Логотип клиента 3" />
+          <li class="client-logo">
+            <a href="" class="client-logo">
+              <img src="./images/logo_client_3.svg" alt="Логотип клиента 3" />
+            </a>
           </li>
 
-          <li>
-            <img src="./images/logo_client_4.svg" alt="Логотип клиента 4" />
+          <li class="client-logo">
+            <a href="" class="client-logo">
+              <img src="./images/logo_client_4.svg" alt="Логотип клиента 4" />
+            </a>
           </li>
 
-          <li>
-            <img src="./images/logo_client_5.svg" alt="Логотип клиента 5" />
+          <li class="client-logo">
+            <a href="" class="client-logo">
+              <img src="./images/logo_client_5.svg" alt="Логотип клиента 5" />
+            </a>
           </li>
 
-          <li>
-            <img src="./images/logo_client_6.svg" alt="Логотип клиента 6" />
+          <li class="client-logo">
+            <a href="">
+              <img src="./images/logo_client_6.svg" alt="Логотип клиента 6" />
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
       <!--Спрятать заголовок-->
 
-      <h2 class="section-title">Адрес и телефоны</h2>
-      <p>Web Studio</p>
+      <h2>Адрес и телефоны</h2>
+      <p class="address-logo">Web Studio</p>
       <address>
-        г. Киев, пр-т Леси Украинки, 26
+        <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
       </address>
 
       <address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <a href="mailto:info@example.com" class="contact-item"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="contact-item">+38 099 111 11 11</a>
       </address>
+
+      <p class="call">Присоединяйтесь</p>
 
       <ul>
-        <li>
-          <a href="">instagram</a>
-          <a href="">twitter</a>
-          <a href="">facebook</a>
-          <a href="">linkedin</a>
-        </li>
-        <li>
-          <p>2020 | Developed by GoIT Students</p>
-        </li>
+        <li><a href="" class="social-link">instagram</a></li>
+        <li><a href="" class="social-link">twitter</a></li>
+        <li><a href="" class="social-link">facebook</a</li>
+        <li><a href="" class="social-link">linkedin</a></li>      
       </ul>
+      <p class="call">Подпишитесь на рассылку</p>
+      <a href="" class="button primary">Подписаться</a>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
