--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body class="page">
+    <!--Шапка сайта-->
+    <header>
+      <nav>
+        <a href="./index.html" class="logo">
+          Web Studio
+        </a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="auth-nav list">
+        <li>
+          <a href="mail:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+
+    <main></main>
+
+    <footer class="page-footer">
+      <!--Спрятать заголовок-->
+
+      <h2>Адрес и телефоны</h2>
+      <p class="address-logo">Web Studio</p>
+      <address>
+        <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
+      </address>
+
+      <address>
+        <a href="mailto:info@example.com" class="contact-item"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="contact-item">+38 099 111 11 11</a>
+      </address>
+
+      <p class="call">Присоединяйтесь</p>
+
+      <ul>
+        <li>
+          <a href="" class="social-link">instagram</a>
+          <a href="" class="social-link">twitter</a>
+          <a href="" class="social-link">facebook</a>
+          <a href="" class="social-link">linkedin</a>
+        </li>
+        <li>
+          <p class="copyright">2020 | Developed by GoIT Students</p>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
