--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,400&family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
@@ -11,7 +12,8 @@
     <header>
       <nav>
         <a href="./index.html" class="logo">
-          Web Studio
+          <span class="logo-web">Web</span>
+          <span>Studio</span>  
         </a>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
@@ -33,7 +35,7 @@
       <!--Герой-->
       <div>
         <section class="hero">
-          <h1>эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
           <a href="" class="button primary">Заказать услугу</a>
         </section>
       </div>
