--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,400&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
@@ -11,7 +16,8 @@
     <header>
       <nav>
         <a href="./index.html" class="logo">
-          Web Studio
+          <span class="logo-web">Web</span>
+          <span>Studio</span>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -29,7 +35,141 @@
       </ul>
     </header>
 
-    <main></main>
+    <main>
+      <section>
+        <h1>Галерея работ</h1>
+        <ul>
+          <li class="botton-portfolio"><button type="botton">Все</button></li>
+          <li class="botton-portfolio">
+            <button type="button">Веб сайты</button>
+          </li>
+          <li class="botton-portfolio">
+            <button type="button">Приложения</button>
+          </li>
+          <li class="botton-portfolio">
+            <button type="button">Дизайн</button>
+          </li>
+          <li class="botton-portfolio">
+            <button type="button">Маркетинг</button>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <a href="">
+              <img src="./images/Technocrack.jpg" alt="" />
+              <h2 class="section-title">Технокряк</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Poster.jpg" alt="" />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Seafood.jpg" alt="" />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Prime.jpg" alt="" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/Boxes.jpg" alt="" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/WebSite.jpg" alt="" />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/Magazine.jpg" alt="" />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/Lab.jpg" alt="" />
+              <h2>Проект Lab</h2>
+              <p>Маркетинг</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+
+          <li>
+            <a href="">
+              <img src="./images/Business.jpg" alt="" />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+              <p>
+                Технокряк это современная площадка распространения коронавируса.
+                Компаниииспользуют платформу для цифрового шпионажа и атак на
+                защищенные сервера конкурентов
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer class="page-footer">
       <!--Спрятать заголовок-->
