Закончено оформление текста

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul>
           <li>
             <h3 class="block-title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -56,7 +56,7 @@
 
           <li>
             <h3 class="block-title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -64,7 +64,7 @@
 
           <li>
             <h3 class="block-title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -72,7 +72,7 @@
 
           <li>
             <h3 class="block-title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -225,7 +225,7 @@
       <!--Спрятать заголовок-->
 
       <h2>Адрес и телефоны</h2>
-      <p class="address-logo">Web Studio</p>
+      <span class="logo-web">Web</span><span class="logo-studio">Studio</span> 
       <address>
         <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
       </address>
