--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,10 @@
       <!--Спрятать заголовок-->
     
       <h2>Адрес и телефоны</h2>
-      <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+      <a href="./index.html" class="logo">
+        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+      </a>
+      
       <address>
         <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
       </address>
