--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
 
       <h2>Адрес и телефоны</h2>
       <a href="./index.html" class="logo">
-        <span class="logo-web">Web</span>
-        <span>Studio</span>
+        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
       </a>
       <address>
         <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
