--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header>
       <nav>
         <a href="./index.html" class="logo">
-          <span class="logo-web">Web</span>
-          <span>Studio</span>  
+          <span class="logo-web">Web</span><span>Studio</span>  
         </a>
         <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
