--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,7 @@
     <header>
       <nav>
         <a href="./index.html" class="logo">
-          <span class="logo-web">Web</span>
-          <span>Studio</span>
+          <span class="logo-web">Web</span><span>Studio</span>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
