--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,400&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/normalise.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <!--Шапка сайта-->
+
+    <!--Шапка сайта--> 
     <header>
       <nav>
         <a href="./index.html" class="logo">
